kube/app-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-production
spec:
  selector:
    matchLabels:
      app: app-production
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-production
    spec:
      containers:
        - name: app-production
          image: ghcr.io/abacf/sae503:1.0.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-production-service
spec:
  selector:
    app: app-production
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
