kube/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-prometheus

spec:
  selector:
    app: traefik
  type: ClusterIP
  ports:
    - protocol: TCP
      name: prometheus
      port: 9090
