kube/app-route.yml
apiVersion: apiextensions.k8s.io/v1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.172.18.200.171.nip.io`)
      kind: Rule
      services:
        - name: app-production
          port: 8000
