kube/grafana-route.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app.kubernetes.io/name: grafana
  type: ClusterIP
  ports:
    - name: grafana
      protocol: TCP
      port: 3000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.192.168.1.52.nip.io`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
